Fixed scrollbar being created by bar

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 	font-weight: normal;
 	font-style: normal;
 }
+
 @font-face {
 	font-family: 'Proggy';
 	src: url('../fonts/ProggyTiny.ttf') format('truetype');
@@ -49,17 +50,19 @@ body {
 	color: #d6c3b6;
 }
 
+
 #bar{
-	position:absolute;
-	top: 0px;
-	left: 0px;
-	background-color: #181512;
-	color: #8c644c;
-	box-shadow: 0px 5px 10px #181512;
-	text-align: center;
-	width: 100%;
-	padding: 2px;
+        position:absolute;
+        top: 0px;
+        left: 0px;
+        background-color: #181512;
+        color: #8c644c;
+        box-shadow: 0px 5px 10px #181512;
+        text-align: center;
+        width: 100%;
+        padding-top: 2px;
 }
+
 
 a{
 	color: #FFFFFF;
